--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>WebPrefer</title>
+        <link rel="shortcut icon" type="image/png" href="wp.png"/>
         <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Baloo+Bhaijaan|Basic" rel="stylesheet">
         <style>
             body {margin: 0;}
