--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title>WebPrefer</title>
         <link rel="shortcut icon" type="image/png" href="wp.png"/>
-        <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Baloo+Bhaijaan|Basic" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Baloo+Bhaijaan|Basic" rel="stylesheet"/>
         <style>
             body {margin: 0;}
             section {padding: 5em 0;}
