Use reletive paths

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <title>WebPrefer AB</title>
         <meta name="description" content="WebPrefer, en utvecklings byrå i Växjö, Kalmar & Linköping." />
-        <link rel="manifest" href="/manifest.json" />
-        <link rel="shortcut icon" type="image/png" href="/img/wp.png" />
+        <link rel="manifest" href="manifest.json" />
+        <link rel="shortcut icon" type="image/png" href="img/wp.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1968AA" />
         <style id="wp-header-css">
@@ -220,9 +220,9 @@
                 background-position: top left;
                 background-repeat: no-repeat;
             }
-            #wp-footer .offices .office p.adress {background-image: url(/img/adress.png)}
-            #wp-footer .offices .office p.tel {background-image: url(/img/tel.png)}
-            #wp-footer .offices .office p.mail {background-image: url(/img/mail.png)}
+            #wp-footer .offices .office p.adress {background-image: url(img/adress.png)}
+            #wp-footer .offices .office p.tel {background-image: url(img/tel.png)}
+            #wp-footer .offices .office p.mail {background-image: url(img/mail.png)}
 
             #wp-footer .offices .office a {
                 font-weight: 500;
@@ -274,7 +274,7 @@
     </head>
     <body>
         <header id="wp-header">
-            <a href="/" aria-label="Home"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 515.88 87.39"><path d="M73.3 45.31L99.46 0h21a2.14 2.14 0 0 1 1.9 1.1 2.14 2.14 0 0 1 0 2.19L74.06 87a.88.88 0 0 1-1.52 0L52.86 52.87 33.5 86.4a.88.88 0 0 1-1.52 0L20.33 66.24 58.58 0h24.8L65.26 31.39l8 13.92zm-61 7L.12 31.23a.86.86 0 0 1 0-.88L17.38.46a.86.86 0 0 1 .76-.46h24.3L12.27 52.27z" fill="#020202" fill-rule="evenodd"/><path d="M140.72 21.79h10.54l7 28.15h.12l9.18-28.15h9l9.11 28.89h.12l7.38-28.89H203l-12.83 43.9h-8.62l-9.67-30.38h-.12l-9.67 30.38h-8.31zM207.68 21.79h29.82v8.93h-20.14v8.18h19v8.93h-19v8.93h21.27v8.93h-30.95zM246.37 21.79h16.37a41.42 41.42 0 0 1 5.74.4 15.7 15.7 0 0 1 5.18 1.61 9.92 9.92 0 0 1 3.72 3.38 10.36 10.36 0 0 1 1.43 5.77 9.21 9.21 0 0 1-2.08 6.17 11.42 11.42 0 0 1-5.49 3.5v.12a12.58 12.58 0 0 1 3.93 1.26 10.52 10.52 0 0 1 3 2.29 9.78 9.78 0 0 1 2 3.25 11.44 11.44 0 0 1 .68 4 10.55 10.55 0 0 1-1.49 5.8 11.69 11.69 0 0 1-3.85 3.66 16.82 16.82 0 0 1-5.3 2 28.33 28.33 0 0 1-5.86.62h-18zM256 39.34h7a9.87 9.87 0 0 0 2.2-.25 6.09 6.09 0 0 0 2-.81 4.22 4.22 0 0 0 1.4-1.49 4.47 4.47 0 0 0 .53-2.23 4.05 4.05 0 0 0-.59-2.26 4.11 4.11 0 0 0-1.54-1.4 7.29 7.29 0 0 0-2.11-.71 12.66 12.66 0 0 0-2.29-.22H256zm0 18.17h8.68a10.72 10.72 0 0 0 2.26-.25 6 6 0 0 0 2.08-.87 4.93 4.93 0 0 0 1.52-1.61 4.65 4.65 0 0 0 .59-2.42 3.89 3.89 0 0 0-.77-2.51 4.93 4.93 0 0 0-2-1.46 10.05 10.05 0 0 0-2.54-.68 19.06 19.06 0 0 0-2.54-.19H256zM286.55 21.79h16.31a32.3 32.3 0 0 1 6.45.62 14.68 14.68 0 0 1 5.3 2.14 10.83 10.83 0 0 1 3.6 4.09 14 14 0 0 1 1.33 6.48 15 15 0 0 1-1.24 6.45 10.58 10.58 0 0 1-3.41 4.15 13.84 13.84 0 0 1-5.15 2.2 30.19 30.19 0 0 1-6.45.65h-7.07v17.12h-9.67zm9.67 18.6h6.45a12.41 12.41 0 0 0 2.51-.25 6.65 6.65 0 0 0 2.17-.84 4.47 4.47 0 0 0 1.55-1.61 5.11 5.11 0 0 0 .59-2.57 4.35 4.35 0 0 0-.78-2.7 5.15 5.15 0 0 0-2-1.58 8.49 8.49 0 0 0-2.7-.71 27.52 27.52 0 0 0-2.85-.16h-5zM325.61 21.79h17a30 30 0 0 1 6.35.65 15.12 15.12 0 0 1 5.27 2.17 10.85 10.85 0 0 1 3.6 4.09 13.86 13.86 0 0 1 1.33 6.42 12.88 12.88 0 0 1-2.43 7.88 10.88 10.88 0 0 1-7.07 4.12l11.16 18.54h-11.59l-9.18-17.55h-4.77v17.58h-9.67zM335.28 40H341q1.3 0 2.76-.09a8.66 8.66 0 0 0 2.64-.56 4.57 4.57 0 0 0 2-1.46 4.44 4.44 0 0 0 .78-2.79 4.64 4.64 0 0 0-.68-2.67 4.57 4.57 0 0 0-1.74-1.52 7.73 7.73 0 0 0-2.42-.71 19.71 19.71 0 0 0-2.74-.2h-6.32zM366.15 21.79H396v8.93h-20.17v8.18h19v8.93h-19v8.93h21.27v8.93h-30.95zM405.21 21.79h29.45v8.93h-19.77v8.93h18.29v8.93h-18.29v17.11h-9.67zM442 21.79h29.8v8.93h-20.15v8.18h19v8.93h-19v8.93h21.27v8.93H442zM480.67 21.79h17a30 30 0 0 1 6.35.65 15.12 15.12 0 0 1 5.27 2.17 10.85 10.85 0 0 1 3.6 4.09 13.86 13.86 0 0 1 1.33 6.42 12.88 12.88 0 0 1-2.43 7.88 10.88 10.88 0 0 1-7.07 4.12l11.16 18.54h-11.59l-9.18-17.55h-4.77v17.58h-9.67zM490.34 40H496q1.3 0 2.76-.09a8.66 8.66 0 0 0 2.64-.56 4.57 4.57 0 0 0 2-1.46 4.44 4.44 0 0 0 .78-2.79 4.64 4.64 0 0 0-.68-2.67 4.57 4.57 0 0 0-1.74-1.52 7.73 7.73 0 0 0-2.42-.71 19.71 19.71 0 0 0-2.67-.19h-6.32z"/></svg></a>
+            <a href="#" aria-label="Home"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 515.88 87.39"><path d="M73.3 45.31L99.46 0h21a2.14 2.14 0 0 1 1.9 1.1 2.14 2.14 0 0 1 0 2.19L74.06 87a.88.88 0 0 1-1.52 0L52.86 52.87 33.5 86.4a.88.88 0 0 1-1.52 0L20.33 66.24 58.58 0h24.8L65.26 31.39l8 13.92zm-61 7L.12 31.23a.86.86 0 0 1 0-.88L17.38.46a.86.86 0 0 1 .76-.46h24.3L12.27 52.27z" fill="#020202" fill-rule="evenodd"/><path d="M140.72 21.79h10.54l7 28.15h.12l9.18-28.15h9l9.11 28.89h.12l7.38-28.89H203l-12.83 43.9h-8.62l-9.67-30.38h-.12l-9.67 30.38h-8.31zM207.68 21.79h29.82v8.93h-20.14v8.18h19v8.93h-19v8.93h21.27v8.93h-30.95zM246.37 21.79h16.37a41.42 41.42 0 0 1 5.74.4 15.7 15.7 0 0 1 5.18 1.61 9.92 9.92 0 0 1 3.72 3.38 10.36 10.36 0 0 1 1.43 5.77 9.21 9.21 0 0 1-2.08 6.17 11.42 11.42 0 0 1-5.49 3.5v.12a12.58 12.58 0 0 1 3.93 1.26 10.52 10.52 0 0 1 3 2.29 9.78 9.78 0 0 1 2 3.25 11.44 11.44 0 0 1 .68 4 10.55 10.55 0 0 1-1.49 5.8 11.69 11.69 0 0 1-3.85 3.66 16.82 16.82 0 0 1-5.3 2 28.33 28.33 0 0 1-5.86.62h-18zM256 39.34h7a9.87 9.87 0 0 0 2.2-.25 6.09 6.09 0 0 0 2-.81 4.22 4.22 0 0 0 1.4-1.49 4.47 4.47 0 0 0 .53-2.23 4.05 4.05 0 0 0-.59-2.26 4.11 4.11 0 0 0-1.54-1.4 7.29 7.29 0 0 0-2.11-.71 12.66 12.66 0 0 0-2.29-.22H256zm0 18.17h8.68a10.72 10.72 0 0 0 2.26-.25 6 6 0 0 0 2.08-.87 4.93 4.93 0 0 0 1.52-1.61 4.65 4.65 0 0 0 .59-2.42 3.89 3.89 0 0 0-.77-2.51 4.93 4.93 0 0 0-2-1.46 10.05 10.05 0 0 0-2.54-.68 19.06 19.06 0 0 0-2.54-.19H256zM286.55 21.79h16.31a32.3 32.3 0 0 1 6.45.62 14.68 14.68 0 0 1 5.3 2.14 10.83 10.83 0 0 1 3.6 4.09 14 14 0 0 1 1.33 6.48 15 15 0 0 1-1.24 6.45 10.58 10.58 0 0 1-3.41 4.15 13.84 13.84 0 0 1-5.15 2.2 30.19 30.19 0 0 1-6.45.65h-7.07v17.12h-9.67zm9.67 18.6h6.45a12.41 12.41 0 0 0 2.51-.25 6.65 6.65 0 0 0 2.17-.84 4.47 4.47 0 0 0 1.55-1.61 5.11 5.11 0 0 0 .59-2.57 4.35 4.35 0 0 0-.78-2.7 5.15 5.15 0 0 0-2-1.58 8.49 8.49 0 0 0-2.7-.71 27.52 27.52 0 0 0-2.85-.16h-5zM325.61 21.79h17a30 30 0 0 1 6.35.65 15.12 15.12 0 0 1 5.27 2.17 10.85 10.85 0 0 1 3.6 4.09 13.86 13.86 0 0 1 1.33 6.42 12.88 12.88 0 0 1-2.43 7.88 10.88 10.88 0 0 1-7.07 4.12l11.16 18.54h-11.59l-9.18-17.55h-4.77v17.58h-9.67zM335.28 40H341q1.3 0 2.76-.09a8.66 8.66 0 0 0 2.64-.56 4.57 4.57 0 0 0 2-1.46 4.44 4.44 0 0 0 .78-2.79 4.64 4.64 0 0 0-.68-2.67 4.57 4.57 0 0 0-1.74-1.52 7.73 7.73 0 0 0-2.42-.71 19.71 19.71 0 0 0-2.74-.2h-6.32zM366.15 21.79H396v8.93h-20.17v8.18h19v8.93h-19v8.93h21.27v8.93h-30.95zM405.21 21.79h29.45v8.93h-19.77v8.93h18.29v8.93h-18.29v17.11h-9.67zM442 21.79h29.8v8.93h-20.15v8.18h19v8.93h-19v8.93h21.27v8.93H442zM480.67 21.79h17a30 30 0 0 1 6.35.65 15.12 15.12 0 0 1 5.27 2.17 10.85 10.85 0 0 1 3.6 4.09 13.86 13.86 0 0 1 1.33 6.42 12.88 12.88 0 0 1-2.43 7.88 10.88 10.88 0 0 1-7.07 4.12l11.16 18.54h-11.59l-9.18-17.55h-4.77v17.58h-9.67zM490.34 40H496q1.3 0 2.76-.09a8.66 8.66 0 0 0 2.64-.56 4.57 4.57 0 0 0 2-1.46 4.44 4.44 0 0 0 .78-2.79 4.64 4.64 0 0 0-.68-2.67 4.57 4.57 0 0 0-1.74-1.52 7.73 7.73 0 0 0-2.42-.71 19.71 19.71 0 0 0-2.67-.19h-6.32z"/></svg></a>
             <nav>
                 <a href="#wp-about-us">Om oss</a>
                 <a href="#wp-assignments">Uppdrag</a>
@@ -298,32 +298,32 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit, odio eget vulputate fermentum, enim nunc consequat magna, nec rhoncus augue neque sit amet arcu. Curabitur luctus mi in sagittis suscipit. Nunc a malesuada orci. Morbi sit amet magna ac arcu interdum bibendum efficitur a tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae feugiat urna. Integer congue quam sapien, sed tempor felis molestie non. Ut vehicula turpis sit amet quam semper tempor. Nunc tempor in tortor ac luctus. Etiam molestie vulputate dapibus. Proin in dapibus tortor. Donec purus lacus, finibus in tincidunt ac, aliquet non metus. Maecenas finibus aliquam ex, eget venenatis metus pharetra sed. Suspendisse euismod euismod turpis, quis sodales orci lacinia vel.</p>
                 </div>
                 <div>
-                    <img original-src="/img/wp.png" alt="about us webprefer" />
+                    <img original-src="img/wp.png" alt="about us webprefer" />
                 </div>
             </div>
             <div class="container">
                 <h2>/ Vi är Webprefer</h2>
                 <div class="team">
                     <div class="employee">
-                        <img original-src="/img/aa.png" alt="Alexis Aho" />
+                        <img original-src="img/aa.png" alt="Alexis Aho" />
                         <h3>Alexis <br/>Aho</h3>
                         <a href="mailto:alexis@webprefer.com">alexis@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                     <div class="employee">
-                        <img original-src="/img/mlc.png" alt="Mikael Lindberg Castell" />
+                        <img original-src="img/mlc.png" alt="Mikael Lindberg Castell" />
                         <h3>Mikael <br/>Lindberg Castell</h3>
                         <a href="mailto:alexis@webprefer.com">mikael@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                     <div class="employee">
-                        <img original-src="/img/so.png" alt="Sebastian Österberg" />
+                        <img original-src="img/so.png" alt="Sebastian Österberg" />
                         <h3>Sebastian <br/>Österberg</h3>
                         <a href="mailto:alexis@webprefer.com">sebastian@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                     <div class="employee">
-                        <img original-src="/img/jg.png" alt="Johan Gustafsson" />
+                        <img original-src="img/jg.png" alt="Johan Gustafsson" />
                         <h3>Johan <br/>Gustafsson</h3>
                         <a href="mailto:alexis@webprefer.com">johan@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
@@ -331,29 +331,29 @@
                 </div>
                 <div class="team">
                     <div class="employee">
-                        <img original-src="/img/oh.png" alt="Orhan Hajderovic" />
+                        <img original-src="img/oh.png" alt="Orhan Hajderovic" />
                         <h3>Orhan <br/>Hajderovic</h3>
                         <a href="mailto:orhan@webprefer.com">orhan@webprefer.com</a>
                     </div>
                     <div class="employee">
-                        <img original-src="/img/ep.png" alt="Eddy Procca" />
+                        <img original-src="img/ep.png" alt="Eddy Procca" />
                         <h3>Eddy <br/>Procca</h3>
                         <a href="mailto:eddy@webprefer.com">eddy@webprefer.com</a>
                     </div>
                     <div class="employee">
-                        <img original-src="/img/hw.png" alt="Hanna Wilde" />
+                        <img original-src="img/hw.png" alt="Hanna Wilde" />
                         <h3>Hanna <br/>Wilde</h3>
                         <a href="mailto:hanna@webprefer.com">hanna@webprefer.com</a>
                     </div>
                 </div>
                 <div class="team">
                     <div class="employee">
-                        <img original-src="/img/js.png" alt="Johan Svensson" />
+                        <img original-src="img/js.png" alt="Johan Svensson" />
                         <h3>Johan<br/>Svensson</h3>
                         <a href="mailto:johans@webprefer.com">johans@webprefer.com</a>
                     </div>
                     <div class="employee">
-                        <img original-src="/img/cj.png" alt="Catharina Jarslet" />
+                        <img original-src="img/cj.png" alt="Catharina Jarslet" />
                         <h3>Catharina<br/>Jarslet</h3>
                         <a href="mailto:finance@webprefer.com">finance@webprefer.com</a>
                     </div>
@@ -369,13 +369,13 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit, odio eget vulputate fermentum, enim nunc consequat magna, nec rhoncus augue neque sit amet arcu. Curabitur luctus mi in sagittis suscipit. Nunc a malesuada orci. Morbi sit amet magna ac arcu interdum bibendum efficitur a tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae feugiat urna. Integer congue quam sapien, sed tempor felis molestie non. Ut vehicula turpis sit amet quam semper tempor. Nunc tempor in tortor ac luctus. Etiam molestie vulputate dapibus. Proin in dapibus tortor. Donec purus lacus, finibus in tincidunt ac, aliquet non metus. Maecenas finibus aliquam ex, eget venenatis metus pharetra sed. Suspendisse euismod euismod turpis, quis sodales orci lacinia vel.</p>
                 </div>
                 <div>
-                    <img original-src="/img/wp.png" alt="about us webprefer" />
+                    <img original-src="img/wp.png" alt="about us webprefer" />
                 </div>
             </div>
 
             <div class="gray-section">
                 <div class="container">
-                    <img original-src="/img/partners.png" alt="Webprefer partners" />
+                    <img original-src="img/partners.png" alt="Webprefer partners" />
                 </div>
             </div>
 
@@ -384,7 +384,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit, odio eget vulputate fermentum, enim nunc consequat magna, nec rhoncus augue neque sit amet arcu. Curabitur luctus mi in sagittis suscipit. Nunc a malesuada orci. Morbi sit amet magna ac arcu interdum bibendum efficitur a tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae feugiat urna. Integer congue quam sapien, sed tempor felis molestie non. Ut vehicula turpis sit amet quam semper tempor. Nunc tempor in tortor ac luctus. Etiam molestie vulputate dapibus. Proin in dapibus tortor. Donec purus lacus, finibus in tincidunt ac, aliquet non metus. Maecenas finibus aliquam ex, eget venenatis metus pharetra sed. Suspendisse euismod euismod turpis, quis sodales orci lacinia vel.</p>
                 </div>
                 <div>
-                    <img original-src="/img/wp.png" alt="about us webprefer" />
+                    <img original-src="img/wp.png" alt="about us webprefer" />
                 </div>
             </div>
         </section>
@@ -397,7 +397,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit, odio eget vulputate fermentum, enim nunc consequat magna, nec rhoncus augue neque sit amet arcu. Curabitur luctus mi in sagittis suscipit. Nunc a malesuada orci. Morbi sit amet magna ac arcu interdum bibendum efficitur a tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae feugiat urna. Integer congue quam sapien, sed tempor felis molestie non. Ut vehicula turpis sit amet quam semper tempor. Nunc tempor in tortor ac luctus. Etiam molestie vulputate dapibus. Proin in dapibus tortor. Donec purus lacus, finibus in tincidunt ac, aliquet non metus. Maecenas finibus aliquam ex, eget venenatis metus pharetra sed. Suspendisse euismod euismod turpis, quis sodales orci lacinia vel.</p>
                 </div>
                 <div>
-                    <img original-src="/img/wp.png" alt="work with webprefer" />
+                    <img original-src="img/wp.png" alt="work with webprefer" />
                 </div>
             </div>
 
@@ -496,9 +496,9 @@
                 </div>
                 <p>Webprefer AB (556748-3523)</p>
                 <p>
-                    <a href="https://goo.gl/nyoJKH"><img original-src="/img/facebook.png" alt="Facebook Webprefer AB" /></a>
-                    <a href="https://goo.gl/NiFmv9"><img original-src="/img/instagram.png" alt="Instagram Webprefer AB" /></a>
-                    <a href="https://goo.gl/G7A5XL"><img original-src="/img/linkedin.png" alt="LinkedIn Webprefer AB" /></a>
+                    <a href="https://goo.gl/nyoJKH"><img original-src="img/facebook.png" alt="Facebook Webprefer AB" /></a>
+                    <a href="https://goo.gl/NiFmv9"><img original-src="img/instagram.png" alt="Instagram Webprefer AB" /></a>
+                    <a href="https://goo.gl/G7A5XL"><img original-src="img/linkedin.png" alt="LinkedIn Webprefer AB" /></a>
                 </p>
             </div>
         </footer>
