--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@
 
             <div class="content-section left container">
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit, odio eget vulputate fermentum, enim nunc consequat magna, nec rhoncus augue neque sit amet arcu. Curabitur luctus mi in sagittis suscipit. Nunc a malesuada orci. Morbi sit amet magna ac arcu interdum bibendum efficitur a tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae feugiat urna. Integer congue quam sapien, sed tempor felis molestie non. Ut vehicula turpis sit amet quam semper tempor. Nunc tempor in tortor ac luctus. Etiam molestie vulputate dapibus. Proin in dapibus tortor. Donec purus lacus, finibus in tincidunt ac, aliquet non metus. Maecenas finibus aliquam ex, eget venenatis metus pharetra sed. Suspendisse euismod euismod turpis, quis sodales orci lacinia vel.</p>
+                    <p>Webprefer AB är ett utvecklingsbolag med fokus på spelbranchen. Tillsammans med <a href="http://www.togethergaming.com">Together Gaming</a> och <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> utvecklar vi nästa generations spelplatform får både B2B och B2C.</p>
+                    <p>På Webprefer är vi idag drygt 15 personer som skapar stora värden för bolaget genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö, Kalmar & Linköping.</p>
                 </div>
                 <div>
                     <img original-src="img/wp.png" alt="about us webprefer" />
@@ -313,19 +314,19 @@
                     <div class="employee">
                         <img original-src="img/mlc.png" alt="Mikael Lindberg Castell" />
                         <h3>Mikael <br/>Lindberg Castell</h3>
-                        <a href="mailto:alexis@webprefer.com">mikael@webprefer.com</a>
+                        <a href="mailto:mikael@webprefer.com">mikael@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/so.png" alt="Sebastian Österberg" />
                         <h3>Sebastian <br/>Österberg</h3>
-                        <a href="mailto:alexis@webprefer.com">sebastian@webprefer.com</a>
+                        <a href="mailto:sebastian@webprefer.com">sebastian@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/jg.png" alt="Johan Gustafsson" />
                         <h3>Johan <br/>Gustafsson</h3>
-                        <a href="mailto:alexis@webprefer.com">johan@webprefer.com</a>
+                        <a href="mailto:johan@webprefer.com">johan@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                 </div>
@@ -361,7 +362,7 @@
             </div>
         </section>
 
-        <section id="wp-assignments">
+        <!--section id="wp-assignments">
             <header><h1>/ Uppdrag <em> Vad vi gör?</em></h1></header>
 
             <div class="content-section right container">
@@ -387,14 +388,14 @@
                     <img original-src="img/wp.png" alt="about us webprefer" />
                 </div>
             </div>
-        </section>
+        </section-->
 
         <section id="wp-career">
             <header><h1>/ Karriär <em> Jobba med oss!</em></h1></header>
 
             <div class="content-section right container">
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit, odio eget vulputate fermentum, enim nunc consequat magna, nec rhoncus augue neque sit amet arcu. Curabitur luctus mi in sagittis suscipit. Nunc a malesuada orci. Morbi sit amet magna ac arcu interdum bibendum efficitur a tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae feugiat urna. Integer congue quam sapien, sed tempor felis molestie non. Ut vehicula turpis sit amet quam semper tempor. Nunc tempor in tortor ac luctus. Etiam molestie vulputate dapibus. Proin in dapibus tortor. Donec purus lacus, finibus in tincidunt ac, aliquet non metus. Maecenas finibus aliquam ex, eget venenatis metus pharetra sed. Suspendisse euismod euismod turpis, quis sodales orci lacinia vel.</p>
+                    <p>Vill du vara med att driva utveclingen i en ansvarsfull, toppmodern & högpresterande iGaming platform?</p>
                 </div>
                 <div>
                     <img original-src="img/wp.png" alt="work with webprefer" />
@@ -409,18 +410,18 @@
                         <p>Be our new hero! Help us out managing our projects and build better proucts. You will be the point of contact for both partners, developers & stakeholders.</p>
                     </div>
                     <div>
-                        <a href="#">Läs mer</a>
-                        <a href="#" class="button">Ansök nu</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=135">Läs mer</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=135" class="button">Ansök nu</a>
                     </div>
                 </div>
                 <div class="open-position">
                     <div>
                         <h3>Backend developer</h3> - <em>Fulltime, Växjö Sweden</em><br/>
-                        <p>Join our team of backend developers. Work in modern enterprice systems suce as .NET, SQLServer and more.</p>
+                        <p>Join our team of backend developers. Work in modern enterprice systems such as .NET, SQLServer and more.</p>
                     </div>
                     <div>
-                        <a href="#">Läs mer</a>
-                        <a href="#" class="button">Ansök nu</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=137">Läs mer</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=137" class="button">Ansök nu</a>
                     </div>
                 </div>
                 <div class="open-position">
@@ -429,8 +430,8 @@
                         <p>Build the next generation gambling webistes. We’re using the most popular techics, including Javascript React, NodeJs, contentful etc.</p>
                     </div>
                     <div>
-                        <a href="#">Läs mer</a>
-                        <a href="#" class="button">Ansök nu</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=136">Läs mer</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=136" class="button">Ansök nu</a>
                     </div>
                 </div>
                 <div class="open-position">
@@ -439,8 +440,8 @@
                         <p>Be the one the manage our release and QA process. Be the one the manage our release and QA process. </p>
                     </div>
                     <div>
-                        <a href="#">Läs mer</a>
-                        <a href="#" class="button">Ansök nu</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=134">Läs mer</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=134" class="button">Ansök nu</a>
                     </div>
                 </div>
                 <div class="open-position">
@@ -449,8 +450,8 @@
                         <p>Build the next generation gambling webistes. We’re using the most popular techics, including Javascript React, NodeJs, contentful etc.</p>
                     </div>
                     <div>
-                        <a href="#">Läs mer</a>
-                        <a href="#" class="button">Ansök nu</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=138">Läs mer</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=138" class="button">Ansök nu</a>
                     </div>
                 </div>
                 <div class="open-position">
@@ -459,8 +460,8 @@
                         <p>Be the new test leader in our projects! Build test to ensure the quality of our projects are the best possible.</p>
                     </div>
                     <div>
-                        <a href="#">Läs mer</a>
-                        <a href="#" class="button">Ansök nu</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=134">Läs mer</a>
+                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=134" class="button">Ansök nu</a>
                     </div>
                 </div>
             </div>
@@ -474,7 +475,7 @@
                         <p class="adress">Södra Järnvägsgatan 4 A, <br />
                             352 29 Växjö <br />
                             Sweden</p>
-                        <p class="tel"><a href="tel:0046738861515">(+46) 073-886 15 15</a></p>
+                        <p class="tel"><a href="tel:0046702211832">(+46) 070-221 18 32</a></p>
                         <p class="mail"><a href="mailto:vaxjo@webprefer.com">vaxjo@webprefer.com</a></p>
                     </div>
                     <div class="office">
@@ -482,7 +483,7 @@
                         <p class="adress">Törnebyvägen 3, <br />
                             392 41 Kalmar <br />
                             Sweden</p>
-                        <p class="tel"><a href="tel:0046738861515">(+46) 073-886 15 15</a></p>
+                        <p class="tel"><a href="tel:0046702211832">(+46) 070-221 18 32</a></p>
                         <p class="mail"><a href="mailto:vaxjo@webprefer.com">kalmar@webprefer.com</a></p>
                     </div>
                     <div class="office">
@@ -490,7 +491,7 @@
                         <p class="adress">Rörsångarevägen 2, <br />
                             585 65 Linghem <br />
                             Sweden</p>
-                        <p class="tel"><a href="tel:0046738861515">(+46) 073-886 15 15</a></p>
+                        <p class="tel"><a href="tel:0046702211832">(+46) 070-221 18 32</a></p>
                         <p class="mail"><a href="mailto:linkoping@webprefer.com">linkoping@webprefer.com</a></p>
                     </div>
                 </div>
