--- a/index.html
+++ b/index.html
@@ -295,8 +295,10 @@
 
             <div class="content-section left container">
                 <div>
-                    <p>Webprefer AB är ett utvecklingsbolag med fokus på spelbranchen. Tillsammans med <a href="http://www.togethergaming.com">Together Gaming</a> och <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> utvecklar vi nästa generations spelplatform får både B2B och B2C.</p>
-                    <p>På Webprefer är vi idag drygt 15 personer som skapar stora värden för bolaget genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö, Kalmar & Linköping.</p>
+                    <div>
+                        <p>Webprefer AB är ett utvecklingsbolag med fokus på spelbranchen. Tillsammans med <a href="http://www.togethergaming.com">Together Gaming</a> och <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> utvecklar vi nästa generations spelplatform får både B2B och B2C.</p>
+                        <p>På Webprefer är vi idag drygt 15 personer som skapar stora värden för bolaget genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö, Kalmar & Linköping.</p>
+                    </div>
                 </div>
                 <div>
                     <img original-src="img/wp.png" alt="about us webprefer" />
