--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <div class="content-section left container">
                 <div>
                     <div>
-                        <p>Webprefer AB är ett utvecklingsbolag med fokus på spelbranchen. Tillsammans med <a href="http://www.togethergaming.com">Together Gaming</a> och <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> utvecklar vi nästa generations spelplatform får både B2B och B2C.</p>
+                        <p>Webprefer AB är ett utvecklingsbolag med fokus på spelbranchen. Tillsammans med <a href="http://www.togethergaming.com">Together Gaming</a> och <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> utvecklar vi nästa generations spelplatform för både B2B och B2C.</p>
                         <p>På Webprefer är vi idag drygt 15 personer som skapar stora värden för bolaget genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö, Kalmar & Linköping.</p>
                     </div>
                 </div>
@@ -486,7 +486,7 @@
                             392 41 Kalmar <br />
                             Sweden</p>
                         <p class="tel"><a href="tel:0046702211832">(+46) 070-221 18 32</a></p>
-                        <p class="mail"><a href="mailto:vaxjo@webprefer.com">kalmar@webprefer.com</a></p>
+                        <p class="mail"><a href="mailto:kalmar@webprefer.com">kalmar@webprefer.com</a></p>
                     </div>
                     <div class="office">
                         <h3>Linköping</h3>
