--- a/index.html
+++ b/index.html
@@ -285,8 +285,9 @@
 
         <section id="wp-hero">
             <div class="wrap">
-                <h1>Lorem ipsum,</h1>
-                <p>dolor sit amet consectetur adipiscing elit.</p>
+                <!--h1>Lorem ipsum,</h1>
+                <p>dolor sit amet consectetur adipiscing elit.</p-->
+                <h1>Webprefer</h1>
             </div>
         </section>
 
