Removed project manager and front end dev

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
             <div class="container">
                 <h2>/ Lediga tjänster</h2>
-                <div class="open-position">
+                <!-- <div class="open-position">
                     <div>
                         <h3>Project manager / Coach</h3> - <em>Fulltime, Växjö Sweden</em><br/>
                         <p>Be our new hero! Help us out managing our projects and build better proucts. You will be the point of contact for both partners, developers & stakeholders.</p>
@@ -416,7 +416,7 @@
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=135">Läs mer</a>
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=135" class="button">Ansök nu</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="open-position">
                     <div>
                         <h3>Backend developer</h3> - <em>Fulltime, Växjö Sweden</em><br/>
@@ -427,7 +427,7 @@
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=137" class="button">Ansök nu</a>
                     </div>
                 </div>
-                <div class="open-position">
+                <!-- <div class="open-position">
                     <div>
                         <h3>Frontend developer</h3> - <em>Fulltime, Växjö Sweden</em><br/>
                         <p>Build the next generation gambling webistes. We’re using the most popular techics, including Javascript React, NodeJs, contentful etc.</p>
@@ -436,7 +436,7 @@
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=136">Läs mer</a>
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=136" class="button">Ansök nu</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="open-position">
                     <div>
                         <h3>QA & Release Manager</h3> - <em>Fulltime, Växjö Sweden</em><br/>
