--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
                 font-weight: 600;
                 line-height: 16px;
                 font-size: 18px;
+                margin-bottom: 0;
+            }
+            #wp-about-us .employee em {
+                display: block;
+                margin: .5em 0;
+                font-size: 14px;
             }
             #wp-about-us .employee a {
                 display: block;
@@ -285,8 +291,6 @@
 
         <section id="wp-hero">
             <div class="wrap">
-                <!--h1>Lorem ipsum,</h1>
-                <p>dolor sit amet consectetur adipiscing elit.</p-->
                 <h1>Webprefer</h1>
             </div>
         </section>
@@ -311,24 +315,28 @@
                     <div class="employee">
                         <img original-src="img/aa.png" alt="Alexis Aho" />
                         <h3>Alexis <br/>Aho</h3>
+                        <em>Partner / Utvecklare</em>
                         <a href="mailto:alexis@webprefer.com">alexis@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/mlc.png" alt="Mikael Lindberg Castell" />
                         <h3>Mikael <br/>Lindberg Castell</h3>
+                        <em>Partner</em>
                         <a href="mailto:mikael@webprefer.com">mikael@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/so.png" alt="Sebastian Österberg" />
                         <h3>Sebastian <br/>Österberg</h3>
+                        <em>Partner / Utvecklare</em>
                         <a href="mailto:sebastian@webprefer.com">sebastian@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/jg.png" alt="Johan Gustafsson" />
                         <h3>Johan <br/>Gustafsson</h3>
+                        <em>Partner / Utvecklare</em>
                         <a href="mailto:johan@webprefer.com">johan@webprefer.com</a>
                         <a href="tel:0046702211832">(+46) 0702211832</a>
                     </div>
@@ -337,16 +345,19 @@
                     <div class="employee">
                         <img original-src="img/oh.png" alt="Orhan Hajderovic" />
                         <h3>Orhan <br/>Hajderovic</h3>
+                        <em>Utvecklare</em>
                         <a href="mailto:orhan@webprefer.com">orhan@webprefer.com</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/ep.png" alt="Eddy Procca" />
                         <h3>Eddy <br/>Procca</h3>
+                        <em>Utvecklare</em>
                         <a href="mailto:eddy@webprefer.com">eddy@webprefer.com</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/hw.png" alt="Hanna Wilde" />
                         <h3>Hanna <br/>Wilde</h3>
+                        <em>Utvecklare</em>
                         <a href="mailto:hanna@webprefer.com">hanna@webprefer.com</a>
                     </div>
                 </div>
@@ -354,11 +365,13 @@
                     <div class="employee">
                         <img original-src="img/js.png" alt="Johan Svensson" />
                         <h3>Johan<br/>Svensson</h3>
+                        <em>Utvecklare</em>
                         <a href="mailto:johans@webprefer.com">johans@webprefer.com</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/cj.png" alt="Catharina Jarslet" />
                         <h3>Catharina<br/>Jarslet</h3>
+                        <em>Administration</em>
                         <a href="mailto:finance@webprefer.com">finance@webprefer.com</a>
                     </div>
                 </div>
