--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                         <a href="mailto:orhan@webprefer.com">orhan@webprefer.com</a>
                     </div>
                     <div class="employee">
-                        <img original-src="img/ep.png" alt="Eddy Procca" />
-                        <h3>Eddy <br/>Procca</h3>
+                        <img original-src="img/ep.png" alt="Eddy Proca" />
+                        <h3>Eddy <br/>Proca</h3>
                         <em>Utvecklare</em>
                         <a href="mailto:eddy@webprefer.com">eddy@webprefer.com</a>
                     </div>
@@ -411,7 +411,7 @@
 
             <div class="content-section right container">
                 <div>
-                    <p>Vill du vara med att driva utveclingen i en ansvarsfull, toppmodern & högpresterande iGaming platform?</p>
+                    <p>Vill du vara med att driva utvecklingen i en ansvarsfull, toppmodern & högpresterande iGaming platform?</p>
                 </div>
                 <div>
                     <img original-src="img/wp.png" alt="work with webprefer" />
