added team members

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" type="image/png" href="img/wp.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1968AA" />
+        <meta charset="utf-8">
         <style id="wp-header-css">
             body {margin: 0;font-family: 'Poppins', sans-serif;}
             .button {background: #1968AA;padding: 5px 20px;border-radius: 100px;
@@ -28,7 +29,6 @@
                 
                 line-height: 35px;
                 font-size: 18px;
-                text-align: justify;
 
                 display: flex;
                 align-items: center;
@@ -343,12 +343,6 @@
                 </div>
                 <div class="team">
                     <div class="employee">
-                        <img original-src="img/oh.png" alt="Orhan Hajderovic" />
-                        <h3>Orhan <br/>Hajderovic</h3>
-                        <em>Utvecklare</em>
-                        <a href="mailto:orhan@webprefer.com">orhan@webprefer.com</a>
-                    </div>
-                    <div class="employee">
                         <img original-src="img/ep.png" alt="Eddy Proca" />
                         <h3>Eddy <br/>Proca</h3>
                         <em>Utvecklare</em>
@@ -360,8 +354,6 @@
                         <em>Utvecklare</em>
                         <a href="mailto:hanna@webprefer.com">hanna@webprefer.com</a>
                     </div>
-                </div>
-                <div class="team">
                     <div class="employee">
                         <img original-src="img/js.png" alt="Johan Svensson" />
                         <h3>Johan<br/>Svensson</h3>
@@ -369,7 +361,41 @@
                         <a href="mailto:johans@webprefer.com">johans@webprefer.com</a>
                     </div>
                     <div class="employee">
-                        <img original-src="img/cj.png" alt="Catharina Jarslet" />
+                        <img original-src="img/default.png" alt="Rikard Lindgren" />
+                        <h3>Rikard<br/>Lindgren</h3>
+                        <em>Utvecklare</em>
+                        <a href="mailto:rikard@webprefer.com">rikard@webprefer.com</a>
+                    </div>
+                </div>
+                <div class="team">
+                    <div class="employee">
+                        <img original-src="img/default.png" alt="Janne Aho" />
+                        <h3>Janne<br/>Aho</h3>
+                        <em>Utvecklare</em>
+                        <a href="mailto:janne@webprefer.com">janne@webprefer.com</a>
+                    </div>
+                    <div class="employee">
+                        <img original-src="img/default.png" alt="Marianne van Nouhuys" />
+                        <h3>Marianne<br/>van Nouhuys</h3>
+                        <em>Projektledare</em>
+                        <a href="mailto:marianne@webprefer.com">marianne@webprefer.com</a>
+                    </div>
+                    <div class="employee">
+                        <img original-src="img/default.png" alt="Angela Vallejo" />
+                        <h3>Angela<br/>Vallejo</h3>
+                        <em>Testare</em>
+                        <a href="mailto:angela@webprefer.com">angela@webprefer.com</a>
+                    </div>
+                    <div class="employee">
+                        <img original-src="img/default.png" alt="Lina Larsson" />
+                        <h3>Lina<br/>Larsson</h3>
+                        <em>Testare</em>
+                        <a href="mailto:lina@webprefer.com">lina@webprefer.com</a>
+                    </div>
+                </div>
+                <div class="team">
+                    <div class="employee">
+                        <img original-src="img/default.png" alt="Catharina Jarslet" />
                         <h3>Catharina<br/>Jarslet</h3>
                         <em>Administration</em>
                         <a href="mailto:finance@webprefer.com">finance@webprefer.com</a>
