--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <a href="#" aria-label="Home"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 515.88 87.39"><path d="M73.3 45.31L99.46 0h21a2.14 2.14 0 0 1 1.9 1.1 2.14 2.14 0 0 1 0 2.19L74.06 87a.88.88 0 0 1-1.52 0L52.86 52.87 33.5 86.4a.88.88 0 0 1-1.52 0L20.33 66.24 58.58 0h24.8L65.26 31.39l8 13.92zm-61 7L.12 31.23a.86.86 0 0 1 0-.88L17.38.46a.86.86 0 0 1 .76-.46h24.3L12.27 52.27z" fill="#020202" fill-rule="evenodd"/><path d="M140.72 21.79h10.54l7 28.15h.12l9.18-28.15h9l9.11 28.89h.12l7.38-28.89H203l-12.83 43.9h-8.62l-9.67-30.38h-.12l-9.67 30.38h-8.31zM207.68 21.79h29.82v8.93h-20.14v8.18h19v8.93h-19v8.93h21.27v8.93h-30.95zM246.37 21.79h16.37a41.42 41.42 0 0 1 5.74.4 15.7 15.7 0 0 1 5.18 1.61 9.92 9.92 0 0 1 3.72 3.38 10.36 10.36 0 0 1 1.43 5.77 9.21 9.21 0 0 1-2.08 6.17 11.42 11.42 0 0 1-5.49 3.5v.12a12.58 12.58 0 0 1 3.93 1.26 10.52 10.52 0 0 1 3 2.29 9.78 9.78 0 0 1 2 3.25 11.44 11.44 0 0 1 .68 4 10.55 10.55 0 0 1-1.49 5.8 11.69 11.69 0 0 1-3.85 3.66 16.82 16.82 0 0 1-5.3 2 28.33 28.33 0 0 1-5.86.62h-18zM256 39.34h7a9.87 9.87 0 0 0 2.2-.25 6.09 6.09 0 0 0 2-.81 4.22 4.22 0 0 0 1.4-1.49 4.47 4.47 0 0 0 .53-2.23 4.05 4.05 0 0 0-.59-2.26 4.11 4.11 0 0 0-1.54-1.4 7.29 7.29 0 0 0-2.11-.71 12.66 12.66 0 0 0-2.29-.22H256zm0 18.17h8.68a10.72 10.72 0 0 0 2.26-.25 6 6 0 0 0 2.08-.87 4.93 4.93 0 0 0 1.52-1.61 4.65 4.65 0 0 0 .59-2.42 3.89 3.89 0 0 0-.77-2.51 4.93 4.93 0 0 0-2-1.46 10.05 10.05 0 0 0-2.54-.68 19.06 19.06 0 0 0-2.54-.19H256zM286.55 21.79h16.31a32.3 32.3 0 0 1 6.45.62 14.68 14.68 0 0 1 5.3 2.14 10.83 10.83 0 0 1 3.6 4.09 14 14 0 0 1 1.33 6.48 15 15 0 0 1-1.24 6.45 10.58 10.58 0 0 1-3.41 4.15 13.84 13.84 0 0 1-5.15 2.2 30.19 30.19 0 0 1-6.45.65h-7.07v17.12h-9.67zm9.67 18.6h6.45a12.41 12.41 0 0 0 2.51-.25 6.65 6.65 0 0 0 2.17-.84 4.47 4.47 0 0 0 1.55-1.61 5.11 5.11 0 0 0 .59-2.57 4.35 4.35 0 0 0-.78-2.7 5.15 5.15 0 0 0-2-1.58 8.49 8.49 0 0 0-2.7-.71 27.52 27.52 0 0 0-2.85-.16h-5zM325.61 21.79h17a30 30 0 0 1 6.35.65 15.12 15.12 0 0 1 5.27 2.17 10.85 10.85 0 0 1 3.6 4.09 13.86 13.86 0 0 1 1.33 6.42 12.88 12.88 0 0 1-2.43 7.88 10.88 10.88 0 0 1-7.07 4.12l11.16 18.54h-11.59l-9.18-17.55h-4.77v17.58h-9.67zM335.28 40H341q1.3 0 2.76-.09a8.66 8.66 0 0 0 2.64-.56 4.57 4.57 0 0 0 2-1.46 4.44 4.44 0 0 0 .78-2.79 4.64 4.64 0 0 0-.68-2.67 4.57 4.57 0 0 0-1.74-1.52 7.73 7.73 0 0 0-2.42-.71 19.71 19.71 0 0 0-2.74-.2h-6.32zM366.15 21.79H396v8.93h-20.17v8.18h19v8.93h-19v8.93h21.27v8.93h-30.95zM405.21 21.79h29.45v8.93h-19.77v8.93h18.29v8.93h-18.29v17.11h-9.67zM442 21.79h29.8v8.93h-20.15v8.18h19v8.93h-19v8.93h21.27v8.93H442zM480.67 21.79h17a30 30 0 0 1 6.35.65 15.12 15.12 0 0 1 5.27 2.17 10.85 10.85 0 0 1 3.6 4.09 13.86 13.86 0 0 1 1.33 6.42 12.88 12.88 0 0 1-2.43 7.88 10.88 10.88 0 0 1-7.07 4.12l11.16 18.54h-11.59l-9.18-17.55h-4.77v17.58h-9.67zM490.34 40H496q1.3 0 2.76-.09a8.66 8.66 0 0 0 2.64-.56 4.57 4.57 0 0 0 2-1.46 4.44 4.44 0 0 0 .78-2.79 4.64 4.64 0 0 0-.68-2.67 4.57 4.57 0 0 0-1.74-1.52 7.73 7.73 0 0 0-2.42-.71 19.71 19.71 0 0 0-2.67-.19h-6.32z"/></svg></a>
             <nav>
                 <a href="#wp-about-us">Om oss</a>
-                <a href="#wp-assignments">Uppdrag</a>
+                <!-- <a href="#wp-assignments">Uppdrag</a> -->
                 <a href="#wp-career">Karriär</a>
                 <a href="#wp-footer" class="button">Kontakta oss</a>
             </nav>
@@ -324,7 +324,7 @@
                         <h3>Mikael <br/>Lindberg Castell</h3>
                         <em>Partner</em>
                         <a href="mailto:mikael@webprefer.com">mikael@webprefer.com</a>
-                        <a href="tel:0046702211832">(+46) 0702211832</a>
+                        <a href="tel:0046768935996">(+46) 0768935996</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/so.png" alt="Sebastian Österberg" />
@@ -361,21 +361,21 @@
                         <a href="mailto:johans@webprefer.com">johans@webprefer.com</a>
                     </div>
                     <div class="employee">
-                        <img original-src="img/default.png" alt="Rikard Lindgren" />
-                        <h3>Rikard<br/>Lindgren</h3>
-                        <em>Utvecklare</em>
-                        <a href="mailto:rikard@webprefer.com">rikard@webprefer.com</a>
-                    </div>
-                </div>
-                <div class="team">
-                    <div class="employee">
                         <img original-src="img/default.png" alt="Janne Aho" />
                         <h3>Janne<br/>Aho</h3>
                         <em>Utvecklare</em>
                         <a href="mailto:janne@webprefer.com">janne@webprefer.com</a>
                     </div>
+                </div>
+                <div class="team">
                     <div class="employee">
-                        <img original-src="img/default.png" alt="Marianne van Nouhuys" />
+                        <img original-src="img/default.png" alt="Rikard Lindgren" />
+                        <h3>Rikard<br/>Lindgren</h3>
+                        <em>Devops</em>
+                        <a href="mailto:rikard@webprefer.com">rikard@webprefer.com</a>
+                    </div>
+                    <div class="employee">
+                        <img original-src="img/mn.png" alt="Marianne van Nouhuys" />
                         <h3>Marianne<br/>van Nouhuys</h3>
                         <em>Projektledare</em>
                         <a href="mailto:marianne@webprefer.com">marianne@webprefer.com</a>
@@ -395,8 +395,8 @@
                 </div>
                 <div class="team">
                     <div class="employee">
-                        <img original-src="img/default.png" alt="Catharina Jarslet" />
-                        <h3>Catharina<br/>Jarslet</h3>
+                        <img original-src="img/cl.png" alt="Catharina Lindberg" />
+                        <h3>Catharina<br/>Lindberg</h3>
                         <em>Administration</em>
                         <a href="mailto:finance@webprefer.com">finance@webprefer.com</a>
                     </div>
@@ -462,21 +462,21 @@
                         <p>Join our team of backend developers. Work in modern enterprice systems such as .NET, SQLServer and more.</p>
                     </div>
                     <div>
-                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=137">Läs mer</a>
-                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=137" class="button">Ansök nu</a>
+                        <!-- <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=137">Läs mer</a> -->
+                        <a href="mailto:vaxjo@webprefer.com?subject=Backend developer application" class="button">Ansök nu</a>
+                    </div>
+                </div>
+                <div class="open-position">
+                    <div>
+                        <h3>Frontend developer</h3> - <em>Fulltime, Växjö Sweden</em><br/>
+                        <p>Build the next generation gambling webistes. We’re using the most popular techics, including Javascript, React, NodeJs, contentful etc.</p>
+                    </div>
+                    <div>
+                        <!-- <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=136">Läs mer</a> -->
+                        <a href="mailto:vaxjo@webprefer.com?subject=Frontend developer application" class="button">Ansök nu</a>
                     </div>
                 </div>
                 <!-- <div class="open-position">
-                    <div>
-                        <h3>Frontend developer</h3> - <em>Fulltime, Växjö Sweden</em><br/>
-                        <p>Build the next generation gambling webistes. We’re using the most popular techics, including Javascript React, NodeJs, contentful etc.</p>
-                    </div>
-                    <div>
-                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=136">Läs mer</a>
-                        <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=136" class="button">Ansök nu</a>
-                    </div>
-                </div> -->
-                <div class="open-position">
                     <div>
                         <h3>QA & Release Manager</h3> - <em>Fulltime, Växjö Sweden</em><br/>
                         <p>Be the one the manage our release and QA process. Be the one the manage our release and QA process. </p>
@@ -485,8 +485,8 @@
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=134">Läs mer</a>
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=134" class="button">Ansök nu</a>
                     </div>
-                </div>
-                <div class="open-position">
+                </div> -->
+                <!-- <div class="open-position">
                     <div>
                         <h3>DevOps</h3> - <em>Fulltime, Växjö Sweden</em><br/>
                         <p>Build the next generation gambling webistes. We’re using the most popular techics, including Javascript React, NodeJs, contentful etc.</p>
@@ -495,8 +495,8 @@
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=138">Läs mer</a>
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=138" class="button">Ansök nu</a>
                     </div>
-                </div>
-                <div class="open-position">
+                </div> -->
+                <!-- <div class="open-position">
                     <div>
                         <h3>Test developer</h3> - <em>Fulltime, Växjö Sweden</em><br/>
                         <p>Be the new test leader in our projects! Build test to ensure the quality of our projects are the best possible.</p>
@@ -505,7 +505,7 @@
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=134">Läs mer</a>
                         <a href="https://bethard.bamboohr.co.uk/jobs/view.php?id=134" class="button">Ansök nu</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
 
